<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/source_application_1"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/parameter1TextView"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/parameter_1"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/parameter1EditText"
        android:layout_below="@id/parameter1TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_parameter_1"
        tools:ignore="Autofill"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/parameter2TextView"
        android:layout_below="@id/parameter1EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/parameter_2"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/parameter2EditText"
        android:layout_below="@id/parameter2TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_parameter_2"
        tools:ignore="Autofill"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/sendToAppButton"
        android:layout_below="@id/parameter2EditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/open_application_2_passing_values"
        android:textAllCaps="false"
        android:onClick="openApplication2PassingValues"
        />


</RelativeLayout>